# embodied-claude

./: .gitignore  .mcp.json.example  mcpBehavior.toml
.claude/hooks/: ambient-refresh.sh  body-digest.py  heartbeat-daemon.sh  hr-receiver.py  interoception.sh  motion-watch.py  motion-watch.sh  shake-wake.sh
deploy/: RESTORE.md  crontab.txt
deploy/systemd/: ambient-refresh.service  discord-gateway.service  hr-receiver.service  motion-watch.service  voicevox-engine.service
discord-mcp/: .env.example  README.md  discord-gateway.service  gateway-mcp.json  pyproject.toml
discord-mcp/src/discord_mcp/: __init__.py  config.py  gateway.py  listen.py  server.py  voice.py
discord-mcp/tests/: test_discord.py
env-sensor-mcp/: README.md
env-sensor-mcp/firmware/: config.py.example  main.py
memory-mcp/src/memory_mcp/: server.py
presets/: README.md
presets/reno/: CLAUDE.md
presets/saki/: CLAUDE.md
presets/toa/: CLAUDE.md
scripts/: install-mcps.sh
sociality-mcp/src/sociality_mcp/: server.py
tts-mcp/src/tts_mcp/: go2rtc.py
tts-mcp/tests/: test_go2rtc.py
wifi-cam-mcp/src/wifi_cam_mcp/: camera.py  config.py  server.py
