[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-mcp"
version = "0.1.0"
description = "MCP server for sending and reading Discord messages via the REST API (bot token)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "discord-py[voice]>=2.4.0",
    "discord-ext-voice-recv>=0.5.2a179",
    "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "jurigged>=0.6.0",
]

[project.scripts]
discord-mcp = "discord_mcp.server:main"
discord-gateway = "discord_mcp.gateway:main"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# gateway.py embeds multi-line Japanese prompt prose; E501 (line length) is not meaningful there.
"src/discord_mcp/gateway.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
